--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.483.0",
     "mongodb": "^6.13.1",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
